2003-05-08 Serg Stoyan <stoyan@hologr.com>

	* PCMenuController.m:
	(validateMenuItem:): Update to the current set of menu items.
	* ProjectCenter_main.m:
	(createMenu): Set saveFiles: action to "Save Files..." menu item.

	* PCBaseFileTypes/PCBaseFileType.m:
	(createFileOfType:type:project): Initializing newFile ivar before
	creating file. Cleanup.
	
	* PCLib/PCFileManager+UInterface.m:
	(_initUI): Set spacing between buttons to 8.
	* PCLib/PCFileManager.m:
	(showAddFileWindow): Reformatting.
	* PCLib/PCProject.m:
	(save): Removed calling to [self saveAllFiles].
	* PCLib/PCProjectManager.m:
	(saveProject): Removed saving all files.
	(saveFiles): Call [activeProject saveAllFiles] added.

2003-05-07 Serg Stoyan <stoyan@hologr.com>

	* ProjectCenter: Files moved to root directory.
	* ProjectCenterInfo.plist: List of authors updated.
	* GNUmakefile: Don't create ProjectCenter link to . dir.
	* GNUmakefile.postamble: Add removing headers after uninstall.
	* GNUmakefile.bundles: Added. This file is included by bundle's
	GNUmakefile.
	
	* Removed all unused GNUmakefile.preamble, GNUmakefile.postamble, 
	.pcproj and plist files.
	* Add include ../GNUmakefile.bundles to all bundles' GNUmakefiles.
	
2003-05-06 Serg Stoyan <stoyan@hologr.com>

	* PCAppProj/Templates: Created. AppController.h, AppController.m, 
	PC.proj, main.m moved here. Added GNUmakefile.preamble and
	GNUmakefile.postamble files.
	* PCAppProj/Templates/PC.proj: Changed MAKEFILEDIR to 
	$(GNUSTEP_MAKEFILES).
	* PCAppProj/GNUmakefile: Changed resources' locations to new.
	* PCAppProj/Info-project.plist: Removed.

2003-05-05 Serg Stoyan <stoyan@hologr.com>

	* GNUmakefile: Place ProjectCenter subproject after PCLib.
	* pcproj_bundle.make: Added.

	* PCAppProj/GNUmakefile: Added include pcproj_bundle.make.
	* PCBaseFileTypes/GNUmakefile: Ditto.
	* PCBundleProj/GNUmakefile: Ditto.
	* PCGormProj/GNUmakefile: Ditto.
	* PCLibProj/GNUmakefile: Ditto.
	* PCRenaissanceProj/GNUmakefile: Ditto.