@@ -31,11 +31,11 @@
   FullVersionID = "ProjectCenter 0.3.2";
   Authors = (
     "Serg Stoyan <stoyan@on.com.ua>",
-    "David Ayers",
-    "Richard Frith-Macdonald",
-    "Nicola Pero",
-    "Pierre-Yves Rivaille",
-    "Adam Fedor",
+    "David Ayers <d.ayers@inode.at>",
+    "Richard Frith-Macdonald <rfm@gnu.org>",
+    "Nicola Pero  <n.pero@mi.flashnet.it>",
+    "Pierre-Yves Rivaille  <pyrivail@ens-lyon.fr>",
+    "Adam Fedor <fedor@gnu.org>",
     "Philippe C.D. Robert <probert@siggraph.org>");
   URL = "http://www.gnustep.org";
   Copyright = "Copyright (C) 1999 - 2003 Free Software Foundation";
